--- a/java-maven-test/pom.xml
+++ b/java-maven-test/pom.xml
@@ -49,6 +49,8 @@
   <properties>
     <acttimestamp>${maven.build.timestamp}</acttimestamp>
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
  
   <build>
