--- a/java-maven-test/pom.xml
+++ b/java-maven-test/pom.xml
@@ -50,7 +50,9 @@
     <acttimestamp>${maven.build.timestamp}</acttimestamp>
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 	  <maven.compiler.source>8</maven.compiler.source> 
-	  <maven.compiler.target>8</maven.compiler.target> 
+	  <maven.compiler.target>8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
  
   <build>
